--- a/web/ui/react-app/src/components/Layout/style.css
+++ b/web/ui/react-app/src/components/Layout/style.css
@@ -7,23 +7,31 @@
     font-weight: 600;
     text-align: center;
 }
+  [data-theme="dark"] .site-layout .site-layout-background {
+    background: #141414;
+  }
 
 .site-layout .site-layout-background {
   background: #fff;
 }
-  [data-theme="dark"] .site-layout .site-layout-background {
-    background: #141414;
-  }
 .btn-status{
-  	font-size: 12px;
-    border: 0;
-    color: white;
-    text-transform: capitalize;
-        border-radius: 10px;
-        -moz-border-radius: 10px;
-        -webkit-border-radius: 10px;
-        margin-left:10px
+    text-transform: capitalize;            
+        margin-left:5px                   
+}                                          
+.menu-label{                                          
+  text-transform: capitalize;                         
+}                                                     
+.benchmark-sider{                                     
+  min-width: 258px;                                   
+  width: 258px;                                       
+}                                                     
+.ant-layout-sider{
+	background:#fff;
 }
-.menu-label{
-	text-transform: capitalize;
+
+.ant-layout-sider-trigger {
+background: aliceblue!important;
+}
+.ant-layout-sider-trigger span{
+color: #114411;
 }
