update app clone name

--- a/web/ui/react-app/src/components/Layout/style.css
+++ b/web/ui/react-app/src/components/Layout/style.css
@@ -35,3 +35,8 @@ background: aliceblue!important;
 .ant-layout-sider-trigger span{
 color: #114411;
 }
+.app-small-timestamp{
+margin-left: 20px;
+    margin-top: -15px;
+    margin-bottom: 20px;
+}
