hide app icon in sidebar

--- a/web/ui/react-app/src/components/Layout/style.css
+++ b/web/ui/react-app/src/components/Layout/style.css
@@ -51,3 +51,6 @@
 .ant-menu-inline-collapsed .application-status {
   display: none;
 }
+.ant-menu-inline .anticon-area-chart {
+    display: none;
+}
